--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="./favicon.ico" />
-    <title>Christian Montero</title>
+    <title>Hani Darwisha</title>
     <style>
       * {
         font-family: "Roboto", sans-serif;
