--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="//code.tidio.co/dgjgxuocsy5i9612xvl7nltcofmynwzv.js" async></script>
+
   </body>
 </html>
