updated the description of the website.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="IT specialist Hani Darwisha portfolio"
+      content="Portfolio website of Hani Darwisha. IT specialist | Web Designer & Developer | Project Manager | Hardware Enthusiast | UI/UX | PC Troubleshooting & Maintenance | Technical Support"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
