--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     
-    <script async data-id="101466323" src="//static.getclicky.com/js"></script>
+    <!-- <script async data-id="101466323" src="//static.getclicky.com/js"></script> -->
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-W3M66S22');</script>
+    <!-- End Google Tag Manager -->
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
